// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Product Tile LargerProductTile smoke-test 1`] = `
<div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
  <div class="items-center flex"
       style="gap: 48px;"
  >
    <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
          style="width: 144px; height: 144px; border-radius: 36px;"
    >
      <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
            style="height: 142px; border-radius: 36px;"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="128"
             height="128"
             fill="none"
             viewbox="0 0 128 128"
             class="text-neutral-1300 dark:text-neutral-000"
             style="width: 96px; height: 96px;"
        >
          <path stroke="currentColor"
                stroke-width="5"
                d="M56.603 13.893 16.802 77.888C15.145 80.552 17.06 84 20.198 84H62a2 2 0 0 1 2 2v25.995c0 4.023 5.272 5.529 7.397 2.112l39.801-63.994c1.657-2.665-.259-6.113-3.396-6.113H66a2 2 0 0 1-2-2V16.005c0-4.023-5.272-5.529-7.397-2.112Z"
          >
          </path>
        </svg>
      </span>
    </span>
    <span class="flex flex-col justify-center">
      <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
            style="font-size: 36px; letter-spacing: 0.06em;"
      >
        Ably
      </span>
      <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
            style="font-size: 55.3846px;"
      >
        Pub/Sub
      </span>
    </span>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTileWithFilledIcons smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-8">
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <defs>
              <linearGradient id="paint0_linear_3807_142-:rk:"
                              x1="64"
                              x2="64"
                              y1="27.434"
                              y2="110.189"
                              gradientunits="userSpaceOnUse"
              >
                <stop stop-color="#FF5416">
                </stop>
                <stop offset="1"
                      stop-color="#FF2739"
                >
                </stop>
              </linearGradient>
            </defs>
            <path fill="url(#paint0_linear_3807_142-:rk:)"
                  fill-rule="evenodd"
                  d="M54.48 12.572c3.453-5.551 12.02-3.105 12.02 3.433V41.5h41.302c5.099 0 8.212 5.603 5.519 9.933L73.52 115.428c-3.453 5.551-12.02 3.105-12.02-3.433V86.5H20.198c-5.099 0-8.212-5.603-5.52-9.933z"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M56.603 13.893 16.802 77.888C15.145 80.552 17.06 84 20.198 84H62a2 2 0 0 1 2 2v25.995c0 4.023 5.272 5.529 7.397 2.112l39.801-63.994c1.657-2.665-.259-6.113-3.396-6.113H66a2 2 0 0 1-2-2V16.005c0-4.023-5.272-5.529-7.397-2.112Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Pub/Sub
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs for building realtime applications.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <defs>
              <linearGradient id="paint0_linear_3636_438-:rm:"
                              x1="64"
                              x2="64"
                              y1="29.85"
                              y2="109.883"
                              gradientunits="userSpaceOnUse"
              >
                <stop stop-color="#FF5416">
                </stop>
                <stop offset="1"
                      stop-color="#FF2739"
                >
                </stop>
              </linearGradient>
            </defs>
            <path fill="url(#paint0_linear_3636_438-:rm:)"
                  fill-rule="evenodd"
                  d="M11.5 35c0-12.426 10.074-22.5 22.5-22.5h60c12.426 0 22.5 10.074 22.5 22.5v74.41c0 7.385-8.77 11.257-14.227 6.281l-22.812-20.8a1.5 1.5 0 0 0-1.01-.391H34c-12.426 0-22.5-10.074-22.5-22.5z"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M34 11h60c11.046 0 20 8.954 20 20v74.41c0 5.213-6.19 7.946-10.043 4.434l-22.812-20.8A4 4 0 0 0 78.45 88H34c-11.046 0-20-8.954-20-20V31c0-11.046 8.954-20 20-20Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Chat
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Build feature-rich live chat experiences.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <defs>
              <linearGradient id="paint0_linear_3807_221-:ro:"
                              x1="65.785"
                              x2="65.785"
                              y1="31.716"
                              y2="108.821"
                              gradientunits="userSpaceOnUse"
              >
                <stop stop-color="#FF5416">
                </stop>
                <stop offset="1"
                      stop-color="#FF2739"
                >
                </stop>
              </linearGradient>
            </defs>
            <path fill="url(#paint0_linear_3807_221-:ro:)"
                  d="M15.318 25.777c-1.762-6.366 4.093-12.221 10.46-10.46l84.559 23.406c7.856 2.174 8.443 13.088.866 16.093L73.036 69.951a5.5 5.5 0 0 0-3.085 3.085l-15.135 38.167c-3.005 7.577-13.919 6.99-16.093-.866z"
            >
            </path>
          </svg>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="m41.23 109.769-23.404-84.56c-1.244-4.494 2.889-8.627 7.383-7.383l84.56 23.405c5.545 1.535 5.96 9.239.611 11.36L72.213 67.726a8 8 0 0 0-4.487 4.487L52.59 110.38c-2.121 5.349-9.825 4.934-11.36-.611Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Spaces
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Enhance your application with collaborative features.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <defs>
              <linearGradient id="paint0_linear_3807_387-:rq:"
                              x1="64"
                              x2="64"
                              y1="101.232"
                              y2="16.969"
                              gradientunits="userSpaceOnUse"
              >
                <stop stop-color="#FF5416">
                </stop>
                <stop offset="1"
                      stop-color="#FF2739"
                >
                </stop>
              </linearGradient>
            </defs>
            <path fill="url(#paint0_linear_3807_387-:rq:)"
                  fill-rule="evenodd"
                  d="M13.5 52a2.5 2.5 0 0 0-5 0v25c0 23.472 19.028 42.5 42.5 42.5h64.029c3.353 0 4.787-4.26 2.117-6.288l-50.03-37.985c-2.304-1.75-5.616-.106-5.616 2.788V114.5H51c-20.71 0-37.5-16.79-37.5-37.5zm53-2.015c0 2.894-3.312 4.538-5.617 2.788L10.854 14.788C8.184 12.76 9.618 8.5 12.971 8.5H77c23.472 0 42.5 19.028 42.5 42.5v25a2.5 2.5 0 1 1-5 0V51c0-20.71-16.79-37.5-37.5-37.5H66.5z"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M115.029 117H64V78.015a1 1 0 0 1 1.605-.797l50.029 37.986c.763.579.353 1.796-.605 1.796ZM11 52v25c0 22.091 17.909 40 40 40h13M12.97 11H64v38.985a1 1 0 0 1-1.605.797L12.366 12.797c-.763-.58-.353-1.797.605-1.797ZM117 76V51c0-22.091-17.909-40-40-40H64"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveSync
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Fan-out database changes to client applications.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <defs>
              <linearGradient id="paint0_linear_3807_424-:rs:"
                              x1="64"
                              x2="64"
                              y1="26.421"
                              y2="111.391"
                              gradientunits="userSpaceOnUse"
              >
                <stop stop-color="#FF5416">
                </stop>
                <stop offset="1"
                      stop-color="#FF2739"
                >
                </stop>
              </linearGradient>
            </defs>
            <path fill="url(#paint0_linear_3807_424-:rs:)"
                  fill-rule="evenodd"
                  d="M72.208 116.222C85.188 101.747 109 72.533 109 53c0-24.853-20.147-45-45-45S19 28.147 19 53c0 19.533 23.811 48.747 36.792 63.222 4.435 4.945 11.98 4.945 16.416 0M64 71c9.941 0 18-8.059 18-18s-8.059-18-18-18-18 8.059-18 18 8.059 18 18 18"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path fill="currentColor"
                  d="m72.208 116.222-1.861-1.669zm-16.416 0-1.86 1.669zM106.5 53c0 4.412-1.355 9.548-3.723 15.103-2.358 5.532-5.658 11.333-9.396 17.034-7.477 11.404-16.582 22.22-23.034 29.416l3.722 3.338c6.528-7.28 15.82-18.308 23.493-30.013 3.838-5.852 7.302-11.922 9.814-17.814 2.502-5.868 4.124-11.71 4.124-17.064zM64 10.5c23.472 0 42.5 19.028 42.5 42.5h5c0-26.233-21.266-47.5-47.5-47.5zM21.5 53c0-23.472 19.028-42.5 42.5-42.5v-5C37.767 5.5 16.5 26.767 16.5 53zm36.154 61.553c-6.453-7.196-15.558-18.012-23.035-29.416-3.738-5.701-7.038-11.502-9.396-17.034C22.855 62.548 21.5 57.413 21.5 53h-5c0 5.355 1.622 11.196 4.124 17.064 2.512 5.892 5.976 11.962 9.814 17.815 7.674 11.704 16.965 22.732 23.493 30.012zm12.693 0c-3.442 3.837-9.252 3.837-12.693 0l-3.723 3.338c5.429 6.053 14.71 6.053 20.138 0zM79.5 53c0 8.56-6.94 15.5-15.5 15.5v5c11.322 0 20.5-9.178 20.5-20.5zM64 37.5c8.56 0 15.5 6.94 15.5 15.5h5c0-11.322-9.178-20.5-20.5-20.5zM48.5 53c0-8.56 6.94-15.5 15.5-15.5v-5c-11.322 0-20.5 9.178-20.5 20.5zM64 68.5c-8.56 0-15.5-6.94-15.5-15.5h-5c0 11.322 9.178 20.5 20.5 20.5z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Asset Tracking
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Track the geographic location of assets and fleets.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <defs>
              <linearGradient id="paint0_linear_3807_520-:ru:"
                              x1="64"
                              x2="64"
                              y1="27.103"
                              y2="110.608"
                              gradientunits="userSpaceOnUse"
              >
                <stop stop-color="#FF5416">
                </stop>
                <stop offset="1"
                      stop-color="#FF2739"
                >
                </stop>
              </linearGradient>
            </defs>
            <rect width="110"
                  height="110"
                  x="9"
                  y="9"
                  fill="url(#paint0_linear_3807_520-:ru:)"
                  rx="26"
            >
            </rect>
            <path stroke="#fff"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="5"
                  d="m43 66 17 17 26-38"
            >
            </path>
          </svg>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M76 11h17c13.255 0 24 10.745 24 24v17M52 11H35c-13.255 0-24 10.745-24 24v17m0 24v17c0 13.255 10.745 24 24 24h17m65-41v17c0 13.255-10.745 24-24 24H76"
            >
            </path>
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="5"
                  d="m43 66 17 17 26-38"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveObjects
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across client devices.
    </span>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTileWithOverriddenStylesAndClick smoke-test 1`] = `
<div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-pink-200 dark:bg-pink-800 hover:bg-pink-600 dark:hover:bg-pink-400 cursor-pointer">
  <div class="items-center flex"
       style="gap: 13.3333px;"
  >
    <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
          style="width: 40px; height: 40px; border-radius: 10px;"
    >
      <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
            style="height: 38px; border-radius: 10px;"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="128"
             height="128"
             fill="none"
             viewbox="0 0 128 128"
             class="text-neutral-1300 dark:text-neutral-000"
             style="width: 26.6667px; height: 26.6667px;"
        >
          <path stroke="currentColor"
                stroke-width="5"
                d="M56.603 13.893 16.802 77.888C15.145 80.552 17.06 84 20.198 84H62a2 2 0 0 1 2 2v25.995c0 4.023 5.272 5.529 7.397 2.112l39.801-63.994c1.657-2.665-.259-6.113-3.396-6.113H66a2 2 0 0 1-2-2V16.005c0-4.023-5.272-5.529-7.397-2.112Z"
          >
          </path>
        </svg>
      </span>
    </span>
    <span class="flex flex-col justify-center">
      <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
            style="font-size: 10px; letter-spacing: 0.06em;"
      >
        Ably
      </span>
      <span class="block ui-text-p2 font-bold dark:text-neutral-000 mt-[-3px] text-orange-500"
            style="font-size: 15.3846px;"
      >
        Pub/Sub
      </span>
    </span>
  </div>
  <span class="block ui-text-p3 font-medium leading-snug dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300 text-blue-500">
    Low-level APIs for building realtime applications.
  </span>
</div>
`;

exports[`Components/Product Tile ProductTiles smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-8">
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M56.603 13.893 16.802 77.888C15.145 80.552 17.06 84 20.198 84H62a2 2 0 0 1 2 2v25.995c0 4.023 5.272 5.529 7.397 2.112l39.801-63.994c1.657-2.665-.259-6.113-3.396-6.113H66a2 2 0 0 1-2-2V16.005c0-4.023-5.272-5.529-7.397-2.112Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Pub/Sub
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs for building realtime applications.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M34 11h60c11.046 0 20 8.954 20 20v74.41c0 5.213-6.19 7.946-10.043 4.434l-22.812-20.8A4 4 0 0 0 78.45 88H34c-11.046 0-20-8.954-20-20V31c0-11.046 8.954-20 20-20Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Chat
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Build feature-rich live chat experiences.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="m41.23 109.769-23.404-84.56c-1.244-4.494 2.889-8.627 7.383-7.383l84.56 23.405c5.545 1.535 5.96 9.239.611 11.36L72.213 67.726a8 8 0 0 0-4.487 4.487L52.59 110.38c-2.121 5.349-9.825 4.934-11.36-.611Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Spaces
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Enhance your application with collaborative features.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M115.029 117H64V78.015a1 1 0 0 1 1.605-.797l50.029 37.986c.763.579.353 1.796-.605 1.796ZM11 52v25c0 22.091 17.909 40 40 40h13M12.97 11H64v38.985a1 1 0 0 1-1.605.797L12.366 12.797c-.763-.58-.353-1.797.605-1.797ZM117 76V51c0-22.091-17.909-40-40-40H64"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveSync
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Fan-out database changes to client applications.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path fill="currentColor"
                  d="m72.208 116.222-1.861-1.669zm-16.416 0-1.86 1.669zM106.5 53c0 4.412-1.355 9.548-3.723 15.103-2.358 5.532-5.658 11.333-9.396 17.034-7.477 11.404-16.582 22.22-23.034 29.416l3.722 3.338c6.528-7.28 15.82-18.308 23.493-30.013 3.838-5.852 7.302-11.922 9.814-17.814 2.502-5.868 4.124-11.71 4.124-17.064zM64 10.5c23.472 0 42.5 19.028 42.5 42.5h5c0-26.233-21.266-47.5-47.5-47.5zM21.5 53c0-23.472 19.028-42.5 42.5-42.5v-5C37.767 5.5 16.5 26.767 16.5 53zm36.154 61.553c-6.453-7.196-15.558-18.012-23.035-29.416-3.738-5.701-7.038-11.502-9.396-17.034C22.855 62.548 21.5 57.413 21.5 53h-5c0 5.355 1.622 11.196 4.124 17.064 2.512 5.892 5.976 11.962 9.814 17.815 7.674 11.704 16.965 22.732 23.493 30.012zm12.693 0c-3.442 3.837-9.252 3.837-12.693 0l-3.723 3.338c5.429 6.053 14.71 6.053 20.138 0zM79.5 53c0 8.56-6.94 15.5-15.5 15.5v5c11.322 0 20.5-9.178 20.5-20.5zM64 37.5c8.56 0 15.5 6.94 15.5 15.5h5c0-11.322-9.178-20.5-20.5-20.5zM48.5 53c0-8.56 6.94-15.5 15.5-15.5v-5c-11.322 0-20.5 9.178-20.5 20.5zM64 68.5c-8.56 0-15.5-6.94-15.5-15.5h-5c0 11.322 9.178 20.5 20.5 20.5z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Asset Tracking
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Track the geographic location of assets and fleets.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M76 11h17c13.255 0 24 10.745 24 24v17M52 11H35c-13.255 0-24 10.745-24 24v17m0 24v17c0 13.255 10.745 24 24 24h17m65-41v17c0 13.255-10.745 24-24 24H76"
            >
            </path>
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="5"
                  d="m43 66 17 17 26-38"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveObjects
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across client devices.
    </span>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTilesWithoutDescriptionsOrLabels smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-8 justify-center">
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M56.603 13.893 16.802 77.888C15.145 80.552 17.06 84 20.198 84H62a2 2 0 0 1 2 2v25.995c0 4.023 5.272 5.529 7.397 2.112l39.801-63.994c1.657-2.665-.259-6.113-3.396-6.113H66a2 2 0 0 1-2-2V16.005c0-4.023-5.272-5.529-7.397-2.112Z"
            >
            </path>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M34 11h60c11.046 0 20 8.954 20 20v74.41c0 5.213-6.19 7.946-10.043 4.434l-22.812-20.8A4 4 0 0 0 78.45 88H34c-11.046 0-20-8.954-20-20V31c0-11.046 8.954-20 20-20Z"
            >
            </path>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="m41.23 109.769-23.404-84.56c-1.244-4.494 2.889-8.627 7.383-7.383l84.56 23.405c5.545 1.535 5.96 9.239.611 11.36L72.213 67.726a8 8 0 0 0-4.487 4.487L52.59 110.38c-2.121 5.349-9.825 4.934-11.36-.611Z"
            >
            </path>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M115.029 117H64V78.015a1 1 0 0 1 1.605-.797l50.029 37.986c.763.579.353 1.796-.605 1.796ZM11 52v25c0 22.091 17.909 40 40 40h13M12.97 11H64v38.985a1 1 0 0 1-1.605.797L12.366 12.797c-.763-.58-.353-1.797.605-1.797ZM117 76V51c0-22.091-17.909-40-40-40H64"
            >
            </path>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path fill="currentColor"
                  d="m72.208 116.222-1.861-1.669zm-16.416 0-1.86 1.669zM106.5 53c0 4.412-1.355 9.548-3.723 15.103-2.358 5.532-5.658 11.333-9.396 17.034-7.477 11.404-16.582 22.22-23.034 29.416l3.722 3.338c6.528-7.28 15.82-18.308 23.493-30.013 3.838-5.852 7.302-11.922 9.814-17.814 2.502-5.868 4.124-11.71 4.124-17.064zM64 10.5c23.472 0 42.5 19.028 42.5 42.5h5c0-26.233-21.266-47.5-47.5-47.5zM21.5 53c0-23.472 19.028-42.5 42.5-42.5v-5C37.767 5.5 16.5 26.767 16.5 53zm36.154 61.553c-6.453-7.196-15.558-18.012-23.035-29.416-3.738-5.701-7.038-11.502-9.396-17.034C22.855 62.548 21.5 57.413 21.5 53h-5c0 5.355 1.622 11.196 4.124 17.064 2.512 5.892 5.976 11.962 9.814 17.815 7.674 11.704 16.965 22.732 23.493 30.012zm12.693 0c-3.442 3.837-9.252 3.837-12.693 0l-3.723 3.338c5.429 6.053 14.71 6.053 20.138 0zM79.5 53c0 8.56-6.94 15.5-15.5 15.5v5c11.322 0 20.5-9.178 20.5-20.5zM64 37.5c8.56 0 15.5 6.94 15.5 15.5h5c0-11.322-9.178-20.5-20.5-20.5zM48.5 53c0-8.56 6.94-15.5 15.5-15.5v-5c-11.322 0-20.5 9.178-20.5 20.5zM64 68.5c-8.56 0-15.5-6.94-15.5-15.5h-5c0 11.322 9.178 20.5 20.5 20.5z"
            >
            </path>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M76 11h17c13.255 0 24 10.745 24 24v17M52 11H35c-13.255 0-24 10.745-24 24v17m0 24v17c0 13.255 10.745 24 24 24h17m65-41v17c0 13.255-10.745 24-24 24H76"
            >
            </path>
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="5"
                  d="m43 66 17 17 26-38"
            >
            </path>
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Components/Product Tile StaticProductTiles smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-8">
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M56.603 13.893 16.802 77.888C15.145 80.552 17.06 84 20.198 84H62a2 2 0 0 1 2 2v25.995c0 4.023 5.272 5.529 7.397 2.112l39.801-63.994c1.657-2.665-.259-6.113-3.396-6.113H66a2 2 0 0 1-2-2V16.005c0-4.023-5.272-5.529-7.397-2.112Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Pub/Sub
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs for building realtime applications.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="M34 11h60c11.046 0 20 8.954 20 20v74.41c0 5.213-6.19 7.946-10.043 4.434l-22.812-20.8A4 4 0 0 0 78.45 88H34c-11.046 0-20-8.954-20-20V31c0-11.046 8.954-20 20-20Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Chat
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Build feature-rich live chat experiences.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-width="5"
                  d="m41.23 109.769-23.404-84.56c-1.244-4.494 2.889-8.627 7.383-7.383l84.56 23.405c5.545 1.535 5.96 9.239.611 11.36L72.213 67.726a8 8 0 0 0-4.487 4.487L52.59 110.38c-2.121 5.349-9.825 4.934-11.36-.611Z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Spaces
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Enhance your application with collaborative features.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M115.029 117H64V78.015a1 1 0 0 1 1.605-.797l50.029 37.986c.763.579.353 1.796-.605 1.796ZM11 52v25c0 22.091 17.909 40 40 40h13M12.97 11H64v38.985a1 1 0 0 1-1.605.797L12.366 12.797c-.763-.58-.353-1.797.605-1.797ZM117 76V51c0-22.091-17.909-40-40-40H64"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveSync
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Fan-out database changes to client applications.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path fill="currentColor"
                  d="m72.208 116.222-1.861-1.669zm-16.416 0-1.86 1.669zM106.5 53c0 4.412-1.355 9.548-3.723 15.103-2.358 5.532-5.658 11.333-9.396 17.034-7.477 11.404-16.582 22.22-23.034 29.416l3.722 3.338c6.528-7.28 15.82-18.308 23.493-30.013 3.838-5.852 7.302-11.922 9.814-17.814 2.502-5.868 4.124-11.71 4.124-17.064zM64 10.5c23.472 0 42.5 19.028 42.5 42.5h5c0-26.233-21.266-47.5-47.5-47.5zM21.5 53c0-23.472 19.028-42.5 42.5-42.5v-5C37.767 5.5 16.5 26.767 16.5 53zm36.154 61.553c-6.453-7.196-15.558-18.012-23.035-29.416-3.738-5.701-7.038-11.502-9.396-17.034C22.855 62.548 21.5 57.413 21.5 53h-5c0 5.355 1.622 11.196 4.124 17.064 2.512 5.892 5.976 11.962 9.814 17.815 7.674 11.704 16.965 22.732 23.493 30.012zm12.693 0c-3.442 3.837-9.252 3.837-12.693 0l-3.723 3.338c5.429 6.053 14.71 6.053 20.138 0zM79.5 53c0 8.56-6.94 15.5-15.5 15.5v5c11.322 0 20.5-9.178 20.5-20.5zM64 37.5c8.56 0 15.5 6.94 15.5 15.5h5c0-11.322-9.178-20.5-20.5-20.5zM48.5 53c0-8.56 6.94-15.5 15.5-15.5v-5c-11.322 0-20.5 9.178-20.5 20.5zM64 68.5c-8.56 0-15.5-6.94-15.5-15.5h-5c0 11.322 9.178 20.5 20.5 20.5z"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Asset Tracking
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Track the geographic location of assets and fleets.
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-3 rounded-lg gap-2 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-px bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               width="128"
               height="128"
               fill="none"
               viewbox="0 0 128 128"
               class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="5"
                  d="M76 11h17c13.255 0 24 10.745 24 24v17M52 11H35c-13.255 0-24 10.745-24 24v17m0 24v17c0 13.255 10.745 24 24 24h17m65-41v17c0 13.255-10.745 24-24 24H76"
            >
            </path>
            <path stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="5"
                  d="m43 66 17 17 26-38"
            >
            </path>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveObjects
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-800 dark:text-neutral-500 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across client devices.
    </span>
  </div>
</div>
`;
